Code from Silvio (3rd July 2019)
Co-Authored-By: @silviodonato <silvio.donato@cern.ch>

--- a/config/dijet_isr_DijetFisherAlt5.config
+++ b/config/dijet_isr_DijetFisherAlt5.config
@@ -1,8 +1,8 @@
 [CaloTrijet2016]
 variables = ['mjj[270.0,270.0,1000.0]','th1x[0,0,1000.0]']
 
-histoName = ['DijetFilter/dijetMassHisto/dijetMassHisto_isrptcut_70_80', 'DijetFilter/dijetMassHisto/dijetMassHisto_isrptcut_80_90', 'DijetFilter/dijetMassHisto/dijetMassHisto_isrptcut_90_100', 'DijetFilter/dijetMassHisto/dijetMassHisto_isrptcut_100_150', 'DijetFilter/dijetMassHisto/dijetMassHisto_isrptcut_150_200', 'DijetFilter/dijetMassHisto/dijetMassHisto_isrptcut_200_300', 'DijetFilter/dijetMassHisto/dijetMassHisto_isrptcut_300']
-
+#histoName = ['DijetFilter/dijetMassHisto/dijetMassHisto_isrptcut_70_80', 'DijetFilter/dijetMassHisto/dijetMassHisto_isrptcut_80_90', 'DijetFilter/dijetMassHisto/dijetMassHisto_isrptcut_90_100', 'DijetFilter/dijetMassHisto/dijetMassHisto_isrptcut_100_150', 'DijetFilter/dijetMassHisto/dijetMassHisto_isrptcut_150_200', 'DijetFilter/dijetMassHisto/dijetMassHisto_isrptcut_200_300', 'DijetFilter/dijetMassHisto/dijetMassHisto_isrptcut_300']
+histoName="dijetMassHisto_isrptcut_72"
 variables_range = ['mjj_Low[270.0,1000.0]', 'mjj_Blind[270.0,1000.0]', 'mjj_High[270.0,1000.0]']
 
 combine_pdfs = ['RooDijetFisherAlt5Pdf::CaloTrijet2016_bkg(th1x,p1_CaloTrijet2016,p2_CaloTrijet2016,p3_CaloTrijet2016,p4_CaloTrijet2016,sqrts)',
