--- a/config/dijet_silvio_bias.config
+++ b/config/dijet_silvio_bias.config
@@ -1,13 +1,13 @@
 [CaloTrijet2016]
 variables = ['mjj[296.,296.,1000.]','th1x[0,0,1000]','pdf_index[modexp=0,fiveparam=1,atlas=2,atlas6=3,silvio4=4,silvio5=5,silvio6=6,nom3=7,nom4=8,nom5=9,nom6=10,nom7=11,alt3=12,alt4=13,alt5=14,alt6=15,alt7=16]']
 
-histoName = 'DijetFilter/dijetMassHisto/dijetMassHisto_isrptcut_70'
+histoName = 'dijetMassHisto_isrptcut_72'
 
 variables_range = ['mjj_Low[296.,1000.]', 'mjj_Blind[296.,1000.]', 'mjj_High[296.,1000.]']
 
 
 
-combine_parameters = [ 
+combine_parameters = [
     'Ntot_bkg4param_CaloTrijet2016[2.0e+07]',
     'Ntot_bkg5param_CaloTrijet2016[2.0e+07]',
     'Ntot_bkgmodexp_CaloTrijet2016[2.0e+07]',
@@ -28,38 +28,47 @@ combine_parameters = [
     'Ntot_bkgalt6_CaloTrijet2016[2.0e+07]',
     'Ntot_bkgalt7_CaloTrijet2016[2.0e+07]',
     'Ntot_multi_CaloTrijet2016[2.0e+07]',
-    'p0_CaloTrijet2016[1]',
+    'Ntot_bkgalt5new_CaloTrijet2016[3e+07]',
+    # 'p0_CaloTrijet2016[1]',
+    'p5alt1new_CaloTrijet2016[-17.]',
+    'p5alt2new_CaloTrijet2016[1.e-5]',
+    'p5alt3new_CaloTrijet2016[4.47977e+01]',
+    'p5alt4new_CaloTrijet2016[2.69070e-01]',
+    # 'p4_CaloTrijet2016[2.272791e-04]',
+    # 'p5_CaloTrijet2016[0]',
+    # 'p6_CaloTrijet2016[0]',
+    # 'p0_CaloTrijet2016[1]',
 #    'p1_CaloTrijet2016[6.7281e+00]',
 #    'p2_CaloTrijet2016[6.6276e+00]',
 #    'p3_CaloTrijet2016[2.6387e-01]',
-    'p51_CaloTrijet2016[136]', 
+    'p51_CaloTrijet2016[136]',
     'p52_CaloTrijet2016[-52]',
     'p53_CaloTrijet2016[-13]',
     'p54_CaloTrijet2016[-1.2]',
-    'pm1_CaloTrijet2016[-530]', 
+    'pm1_CaloTrijet2016[-530]',
     'pm2_CaloTrijet2016[0.9]',
     'pm3_CaloTrijet2016[-600]',
     'pm4_CaloTrijet2016[0.9]',
-    'pa1_CaloTrijet2016[-1.8]', 
+    'pa1_CaloTrijet2016[-1.8]',
     'pa2_CaloTrijet2016[375]',
     'pa3_CaloTrijet2016[-3750]',
     'pa4_CaloTrijet2016[17500]',
-    'pa61_CaloTrijet2016[-6.5]', 
+    'pa61_CaloTrijet2016[-6.5]',
     'pa62_CaloTrijet2016[900]',
     'pa63_CaloTrijet2016[-14500]',
     'pa64_CaloTrijet2016[140000]',
     'pa65_CaloTrijet2016[-555000]',
-    'p1s4_CaloTrijet2016[5]', 
+    'p1s4_CaloTrijet2016[5]',
     'p2s4_CaloTrijet2016[20]',
     'p3s4_CaloTrijet2016[150]',
-#    'p1sb4_CaloTrijet2016[5]', 
+#    'p1sb4_CaloTrijet2016[5]',
 #    'p2sb4_CaloTrijet2016[0]',
 #    'p3sb4_CaloTrijet2016[150]',
-    'p1s5_CaloTrijet2016[5.2e+00]', 
+    'p1s5_CaloTrijet2016[5.2e+00]',
     'p2s5_CaloTrijet2016[1.8e+01]',
     'p3s5_CaloTrijet2016[1.6e+02]',
     'p4s5_CaloTrijet2016[8.6e-01]',
-    'p1s6_CaloTrijet2016[3.6e+00]', 
+    'p1s6_CaloTrijet2016[3.6e+00]',
     'p2s6_CaloTrijet2016[3.3e+01]',
     'p3s6_CaloTrijet2016[-5.5e+01]',
     'p4s6_CaloTrijet2016[1.6e+01]',
@@ -104,11 +113,11 @@ combine_parameters = [
     'p7alt5_CaloTrijet2016[0]',
     'p6alt5_CaloTrijet2016[0]',
     'p7alt6_CaloTrijet2016[0]',
-    'sqrts[13000]', 
-    'sqrts5[13000]', 
-    'sqrtsm[13000]', 
-    'sqrtsa[13000]', 
-    'sqrtsa6[13000]', 
+    'sqrts[13000]',
+    'sqrts5[13000]',
+    'sqrtsm[13000]',
+    'sqrtsa[13000]',
+    'sqrtsa6[13000]',
     'sqrtss4[13000]',
 #    'sqrtssb4[13000]',
     'sqrtss5[13000]',
@@ -117,6 +126,8 @@ combine_parameters = [
     'sqrtsalt6[13000]',
     'sqrtsalt5[13000]',
     'sqrtsalt4[13000]',
+    'sqrtsalt5new[13000]',
+    'sqrtsalt4new[13000]',
     'sqrtsalt3[13000]',
     'sqrtsnom7[13000]',
     'sqrtsnom6[13000]',
@@ -140,12 +151,14 @@ combine_parameters = [
     'CaloTrijet2016_alt3_norm[1]',
     'CaloTrijet2016_alt4_norm[1]',
     'CaloTrijet2016_alt5_norm[1]',
+    'CaloTrijet2016_alt4new_norm[1]',
+    'CaloTrijet2016_alt5new_norm[1]',
     'CaloTrijet2016_alt6_norm[1]',
     'CaloTrijet2016_alt7_norm[1]',
     'meff_CaloTrijet2016[-1]',
     'seff_CaloTrijet2016[-1]']
 
-combine_pdfs = [ 
+combine_pdfs = [
     'RooModExpBinPdf::CaloTrijet2016_bkgmodexp(th1x,pm1_CaloTrijet2016,pm2_CaloTrijet2016,pm3_CaloTrijet2016,pm4_CaloTrijet2016,sqrtsm)',
     'RooDijet5ParamBinPdf::CaloTrijet2016_bkg5param(th1x,p51_CaloTrijet2016,p52_CaloTrijet2016,p53_CaloTrijet2016,p54_CaloTrijet2016,sqrts5)',
     'RooAtlasBinPdf::CaloTrijet2016_bkgatlas(th1x,pa1_CaloTrijet2016,pa2_CaloTrijet2016,pa3_CaloTrijet2016,pa4_CaloTrijet2016,sqrtsa)',
@@ -162,11 +175,11 @@ combine_pdfs = [
     'RooDijetFisherAlt6Pdf::CaloTrijet2016_bkgalt6(th1x,p6alt1_CaloTrijet2016,p6alt2_CaloTrijet2016,p6alt3_CaloTrijet2016,p6alt4_CaloTrijet2016,p6alt5_CaloTrijet2016,sqrtsalt6)',
     'RooDijetFisherAlt5Pdf::CaloTrijet2016_bkgalt5(th1x,p5alt1_CaloTrijet2016,p5alt2_CaloTrijet2016,p5alt3_CaloTrijet2016,p5alt4_CaloTrijet2016,sqrtsalt5)',
     'RooDijetFisherAlt4Pdf::CaloTrijet2016_bkgalt4(th1x,p4alt1_CaloTrijet2016,p4alt2_CaloTrijet2016,p4alt3_CaloTrijet2016,sqrtsalt4)',
+    'RooDijetFisherAlt5NewPdf::CaloTrijet2016_bkgalt5new(th1x,p5alt1new_CaloTrijet2016,p5alt2new_CaloTrijet2016,p5alt3new_CaloTrijet2016,p5alt4new_CaloTrijet2016,sqrtsalt5new)',
     'RooDijetFisherAlt3Pdf::CaloTrijet2016_bkgalt3(th1x,p3alt1_CaloTrijet2016,p3alt2_CaloTrijet2016,sqrtsalt3)',
-     'RooMultiPdf::CaloTrijet2016_multi(pdf_index,CaloTrijet2016_bkgmodexp,CaloTrijet2016_bkg5param,CaloTrijet2016_bkgatlas,CaloTrijet2016_bkgatlas6,CaloTrijet2016_bkgsilvio4,CaloTrijet2016_bkgsilvio5,CaloTrijet2016_bkgsilvio6,CaloTrijet2016_bkgnom7,CaloTrijet2016_bkgnom6,CaloTrijet2016_bkgnom5,CaloTrijet2016_bkgnom4,CaloTrijet2016_bkgnom3,CaloTrijet2016_bkgalt7,CaloTrijet2016_bkgalt6,CaloTrijet2016_bkgalt5,CaloTrijet2016_bkgalt4,CaloTrijet2016_bkgalt3)',
+     'RooMultiPdf::CaloTrijet2016_multi(pdf_index,CaloTrijet2016_bkgmodexp,CaloTrijet2016_bkg5param,CaloTrijet2016_bkgatlas,CaloTrijet2016_bkgatlas6,CaloTrijet2016_bkgsilvio4,CaloTrijet2016_bkgsilvio5,CaloTrijet2016_bkgsilvio6,CaloTrijet2016_bkgnom7,CaloTrijet2016_bkgnom6,CaloTrijet2016_bkgnom5,CaloTrijet2016_bkgnom4,CaloTrijet2016_bkgnom3,CaloTrijet2016_bkgalt7,CaloTrijet2016_bkgalt6,CaloTrijet2016_bkgalt5,CaloTrijet2016_bkgalt4,CaloTrijet2016_bkgalt3,CaloTrijet2016_bkgalt5new)',
     'SUM::extDijetPdf(Ntot_multi_CaloTrijet2016*CaloTrijet2016_multi)'
     ]
 
 signal_mjj = [296, 325, 354, 386, 419, 453, 489, 526, 565, 606, 649, 693, 740, 788, 838, 890, 944, 1000]
 #signal_mjj = [1, 3, 6, 10, 16, 23, 31, 40, 50, 61, 74, 88, 103, 119, 137, 156, 176, 197, 220, 244, 270, 296, 325, 354, 386, 419, 453, 489, 526, 565, 606, 649, 693, 740, 788, 838, 890, 944, 1000, 1058, 1118, 1181, 1246, 1313, 1383, 1455, 1530, 1607, 1687, 1770, 1856, 1945, 2037, 2132, 2231, 2332, 2438, 2546, 2659, 2775, 2895, 3019, 3147, 3279, 3416, 3558, 3704, 3854, 4010, 4171, 4337, 4509, 4686, 4869, 5058, 5253, 5455, 5663, 5877, 6099, 6328, 6564, 6808, 7060, 7320, 7589, 7866, 8152, 8447, 8752, 9067, 9391, 9726, 10072, 10430, 10798, 11179, 11571, 11977, 12395, 12827, 13272, 13732, 14000]
-
